New demo user, Contact modification

--- a/Nativo/pages/contact/contact.html
+++ b/Nativo/pages/contact/contact.html
@@ -120,72 +120,125 @@
       <!-- /.content-header -->
 
       <!-- Main content -->
-      <div class="content">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="card card-primary card card-outline">
-                <div class="card-body">
-                  <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                      <img src="../../dist/img/user-mauricio.jpeg" class="img-circle elevation-2" alt="Mauricio Drada Dávila">
-                    </div>
-                    <div class="info">
-                      <a href="#" class="d-block">Mauricio Drada Dávila</a>
+      <section class="content">
+
+        <!-- Default box -->
+        <div class="card card-solid">
+          <div class="card-body pb-0">
+            <div class="row d-flex align-items-stretch">
+              <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+                <div class="card bg-light">
+                  <div class="card-header text-muted border-bottom-0">
+                    Nativo
+                  </div>
+                  <div class="card-body pt-0">
+                    <div class="row">
+                      <div class="col-7">
+                        <h2 class="lead"><b>Mauricio Drada</b></h2>
+                        <p class="text-muted text-sm"><b>About: </b> Web Stack programming / DV / Web Designer / Dj
+                          Lover </p>
+                        <ul class="ml-4 mb-0 fa-ul text-muted">
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Address:
+                            Demo Street 123 - 435, Demo City 04312, NJ</li>
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Phone #: + 057
+                            - 310 284 19 94</li>
+                        </ul>
+                      </div>
+                      <div class="col-5 text-center">
+                        <img src="../../dist/img/user-mauricio.jpeg" alt="" class="img-circle img-fluid">
+                      </div>
                     </div>
                   </div>
-                  <p class="card-text">Frontend Developer</p>
-                  <a href="https://github.com/Mauricio-KND" target="_blank" class="card-link">Github</a>
-                  <a href="https://www.linkedin.com/in/mauricio-drada-d%C3%A1vila-02a98a193/" target="_blank"
-                    class="card-link">LinkedIn</a>
-                  <a href="https://twitter.com/drada_mauricio" target="_blank" class="card-link">Twetter</a>
+                  <div class="card-footer">
+                    <div class="text-right">
+                      <a href="https://api.whatsapp.com/send?phone=+573102841994" target="_blank"
+                        class="btn btn-sm bg-teal">
+                        <i class="fas fa-comments"></i>
+                      </a>
+                      <a href="https://github.com/Mauricio-KND" target="_blank" class="btn btn-sm btn-primary">
+                        <i class="fas fa-user"></i> View Profile
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </div>
-
-              <div class="card card-primary card card-outline">
-                <div class="card-body">
-                  <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                      <img src="../../dist/img/user - samir.jpeg" class="img-circle elevation-2" alt="Mauricio Drada Dávila">
-                    </div>
-                    <div class="info">
-                      <a href="#" class="d-block">Samir Millán Orozco</a>
+              <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+                <div class="card bg-light">
+                  <div class="card-header text-muted border-bottom-0">
+                    Nativo
+                  </div>
+                  <div class="card-body pt-0">
+                    <div class="row">
+                      <div class="col-7">
+                        <h2 class="lead"><b>Samir Millan</b></h2>
+                        <p class="text-muted text-sm"><b>About: </b> Machine Learning / DV / Backend / Coffee Lover </p>
+                        <ul class="ml-4 mb-0 fa-ul text-muted">
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Address:
+                            Demo Street 123, Demo City 04312, NJ</li>
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Phone #: + 057
+                            - 305 925 90 29</li>
+                        </ul>
+                      </div>
+                      <div class="col-5 text-center">
+                        <img src="../../dist/img/user2-160x160.jpg" alt="" class="img-circle img-fluid">
+                      </div>
                     </div>
                   </div>
-                  <p class="card-text">Frontend/Backend Developer</p>
-                  <a href="https://github.com/Gaspela04" target="_blank" class="card-link">Github</a>
-                  <a href="https://www.linkedin.com/in/samir-millan-48b911109/" target="_blank"
-                    class="card-link">LinkedIn</a>
-                  <a href="https://twitter.com/Gaspela" target="_blank" class="card-link">Twetter</a>
-                </div>
-              </div><!-- /.card -->
-            </div>
-            <!-- /.col-md-6 -->
-
-            <div class="col-lg-6">
-              <div class="card card-primary card card-outline">
-                <div class="card-body">
-                  <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                      <img src="../../dist/img/user - diego.jpg" class="img-circle elevation-2" alt="Mauricio Drada Dávila">
-                    </div>
-                    <div class="info">
-                      <a href="#" class="d-block">Diego Felipe Quijano Zuñiga</a>
+                  <div class="card-footer">
+                    <div class="text-right">
+                      <a href="https://api.whatsapp.com/send?phone=+573059259029" target="_blank"
+                        class="btn btn-sm bg-teal">
+                        <i class="fas fa-comments"></i>
+                      </a>
+                      <a href="https://github.com/Gaspela04" target="_blank" class="btn btn-sm btn-primary">
+                        <i class="fas fa-user"></i> View Profile
+                      </a>
                     </div>
                   </div>
-                  <p class="card-text">Backend/Devops Developer</p>
-                  <a href="https://github.com/diego0096" target="_blank" class="card-link">Github</a>
-                  <a href="https://www.linkedin.com/in/diego-felipe-quijano-zu%C3%B1iga-997793180/" target="_blank"
-                    class="card-link">LinkedIn</a>
-                  <a href="https://twitter.com/DiegoQ0096" target="_blank" class="card-link">Twetter</a>
                 </div>
               </div>
-              <!-- /.col-md-6 -->
+              <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+                <div class="card bg-light">
+                  <div class="card-header text-muted border-bottom-0">
+                    Nativo
+                  </div>
+                  <div class="card-body pt-0">
+                    <div class="row">
+                      <div class="col-7">
+                        <h2 class="lead"><b>Diego Quijano</b></h2>
+                        <p class="text-muted text-sm"><b>About: </b> Machine Learning / DV / Backend / Coffee Lover </p>
+                        <ul class="ml-4 mb-0 fa-ul text-muted">
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Address:
+                            Demo Street 123, Demo City 04312, NJ</li>
+                          <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Phone #: + 057
+                            - 312 781 49 08</li>
+                        </ul>
+                      </div>
+                      <div class="col-5 text-center">
+                        <img src="../../dist/img/user - diego.jpg" alt="" class="img-circle img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-footer">
+                    <div class="text-right">
+                      <a href="https://api.whatsapp.com/send?phone=+573127814908" target="_blank" class="btn btn-sm bg-teal">
+                        <i class="fas fa-comments"></i>
+                      </a>
+                      <a href="https://github.com/diego0096" target="_blank" class="btn btn-sm btn-primary">
+                        <i class="fas fa-user"></i> View Profile
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <!-- /.row -->
-          </div><!-- /.container-fluid -->
-        </div><!-- /.container-fluid -->
-      </div>
+          </div>
+          <!-- /.card-body -->
+
+        </div>
+        <!-- /.card -->
+
+      </section>
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
